--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,16 +4,10 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
-    <display-name>TestSSM</display-name>
-
     <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
-        <welcome-file>index.htm</welcome-file>
-        <welcome-file>index.jsp</welcome-file>
-        <welcome-file>default.html</welcome-file>
-        <welcome-file>default.htm</welcome-file>
-        <welcome-file>default.jsp</welcome-file>
+        <welcome-file>s/index</welcome-file>
     </welcome-file-list>
+
     <!-- 配置spring -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
@@ -41,7 +35,7 @@
     </filter-mapping>
     <!-- 配置SpringMVC 前端控制器-->
     <servlet>
-        <servlet-name>springmvc</servlet-name>
+        <servlet-name>SpringDispatcherServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
@@ -53,8 +47,8 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>springmvc</servlet-name>
+        <servlet-name>SpringDispatcherServlet</servlet-name>
         <!-- 所有的请求都进入springMVC -->
-        <url-pattern>/</url-pattern>
+        <url-pattern>/s/*</url-pattern>
     </servlet-mapping>
 </web-app>
